
- 2.16 released -

Deal with Python 3.13 no longer having urllib.FancyURLopener

- 2.15 released -

Fix invalid escape sequences that cause warnings in Python 3.12.

- 2.14 released -

In the deprecated anita.Release method, use https, and use
archive.netbsd.org for releases older than 9.0.

Ignoring a suffix of "-dvd" when deducing the architecture name from
the URL of an install ISO, to work around the issue of PR 58357.

Define a scratch disk for vax guests so that they can export ATF test
results to the host.

Support Xen pvshim.  From Manuel Bouyer.

- 2.13 released -

Install the base32 set by default (when present).

When installing a NetBSD version that has the new "base32" set, don't
mistake it for the "base" set.

- 2.12 released -

Fix incorrect scratch disk device name for riscv-riscv64 causing the
export of test result data to the host to fail.

Support the new manhtml, base32, and debug32 sets.

When installing a NetBSD version that has the new "manhtml" set, don't
mistake it for the "man" set.

- 2.11 released -

Increase the default memory size for sparc to 64M.

On macOS, use the -joliet option to "hdiutil makehybrid" as the -iso
option fails to create a Rock Ridge file system even though the
hdiutil manpage says it will.  From Benny Siegert.

Add initial support for riscv-riscv64.

Increase the default of the --test-timeout option to 3 hours, as the
timeout of the crypto/libcrypto/t_libcrypto:bn test case in the NetBSD
ATF test suite has now been increased to 2 hours, and anita must use a
longer timeout than any individual test case.

New command line --no-entropy.

Support Xen PVH virtualization, enabled by "--xen-type pvh".
From Manuel Bouyer.

New command line --partitioning-scheme, for testing i386 and amd64
with MBR partitioning rather than the default GPT partitioning.

- 2.10 released -

Support the new sysinst root password and entropy configuration user
interface introduced on source date 2022.04.21.17.30.15.
